src/test/resources/semantic_errors/funcall_incorrect_type1.notc
void fun(int a, int b) {
}

void main() {
    fun(1, "string");
}
